Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-81393

[REG 5.14->5.15] QTabWidget is broken (QStyleOptionTab::End is wrong)

    XMLWordPrintable

Details

    • Linux/Wayland, macOS
    • 477dc115670d7c122d6590b9be10e076ebff8d08 (qt/qtbase/5.15)

    Description

      It would appear this change: https://codereview.qt-project.org/c/qt/qtbase/+/255141 resulted in a regression - tabs not rendered correctly - see the screenshot attached.

      Attachments

        For Gerrit Dashboard: QTBUG-81393
        # Subject Branch Project Status CR V

        Activity

          People

            chehrlic Christian Ehrlicher
            tpochep Timur Pocheptsov
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes